[feat] fetching shop detail data