@@ -11,7 +11,6 @@ import reactor.test.StepVerifier;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static reactive.shopdisplay.domain.shop.ShopStatus.CLOSE;
@@ -93,7 +92,7 @@ class ShopInMemoryRepositoryTest {
                 .verifyComplete();
     }
 
-    @DisplayName("shopNumber 리스트와 가게 상태로 Shop을 다건 조회한다.")
+    @DisplayName("shopNumber와 가게 상태로 Shop을 단건 조회한다.")
     @Test
     void findAllByIdsAndShopStatus() {
         // given
@@ -102,23 +101,43 @@ class ShopInMemoryRepositoryTest {
         Shop shop3 = createShop("덕수네빵집", OPEN);
         Shop shop4 = createShop("우빈이네빵집", PREPARING);
 
-        Flux<Shop> shopFlux = shopReactiveRepository.saveAll(Arrays.asList(shop1, shop2, shop3, shop4));
-        List<Long> shopNumbers = extractShopNumbersByShopName(shopFlux, List.of("덕수네공방", "우빈이네카페"));
+        Mono<Shop> savedShop1 = shopReactiveRepository.save(shop1);
+        shopReactiveRepository.saveAll(List.of(shop2, shop3, shop4));
+
+        Long shopNumber1 = Objects.requireNonNull(savedShop1.block()).getShopNumber();
 
         // when
-        Flux<Shop> results = shopReactiveRepository.findAllByIdsAndShopStatus(shopNumbers, OPEN);
+        Mono<Shop> shopMono = shopReactiveRepository.findOpenShopById(shopNumber1);
 
         // then
-        StepVerifier.create(results)
+        StepVerifier.create(shopMono)
                 .assertNext(result -> assertThat(result)
                         .extracting("shopName", "shopStatus")
                         .containsExactly("덕수네공방", OPEN)
                 )
-                .assertNext(result -> assertThat(result)
-                        .extracting("shopName", "shopStatus")
-                        .containsExactly("우빈이네카페", OPEN)
-                )
                 .verifyComplete();
+    }
+
+    @DisplayName("OPEN 상태가 아닌 가게를 조회하면 예외가 발생한다.")
+    @Test
+    void findAllByIdsAndShopStatusWithException() {
+        // given
+        Shop shop1 = createShop("덕수네공방", OPEN);
+        Shop shop2 = createShop("우빈이네카페", OPEN);
+        Shop shop3 = createShop("덕수네빵집", OPEN);
+        Shop shop4 = createShop("우빈이네빵집", PREPARING);
+
+        shopReactiveRepository.saveAll(List.of(shop1, shop2, shop3));
+        Mono<Shop> savedShop4 = shopReactiveRepository.save(shop4);
+
+        Long shopNumber4 = Objects.requireNonNull(savedShop4.block()).getShopNumber();
+
+        // when
+        Mono<Shop> shopMono = shopReactiveRepository.findOpenShopById(shopNumber4);
+
+        // then
+        StepVerifier.create(shopMono)
+                .verifyError(IllegalArgumentException.class);
     }
 
     private Shop createShop(String shopName, ShopStatus shopStatus) {
@@ -126,17 +145,6 @@ class ShopInMemoryRepositoryTest {
                 .shopName(shopName)
                 .shopStatus(shopStatus)
                 .build();
-    }
-
-    private List<Long> extractShopNumbersByShopName(Flux<Shop> shopFlux, List<String> shopNames) {
-        return Objects.requireNonNull(shopFlux.collectList().block())
-                .stream()
-                .filter(
-                        shop -> shopNames.stream()
-                                .anyMatch(shopName -> shopName.equals(shop.getShopName()))
-                )
-                .map(Shop::getShopNumber)
-                .collect(Collectors.toList());
     }
 
 }
